--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,5 @@ xcuserdata
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,swiftpm,xcode
+
+.DS_Store
